elastic-system/cilium-network-policy-elastic-operator-allow-kube-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: elastic-operator-allow-kube-apiserver
  namespace: elastic-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: elastic-operator
  egress:
    - toEntities:
        - kube-apiserver
