elastic-system/network-policy-elastic-operator-allow-egress-cluster.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elastic-operator-allow-egress-cluster
  namespace: elastic-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: elastic-operator
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
