elastic-system/network-policy-elastic-operator-allow-egress-kube-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elastic-operator-allow-egress-kube-api
  namespace: elastic-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: elastic-operator
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.43.0.1/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 6443
