elastic-system/network-policy-elastic-operator-allow-ingress-intra-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elastic-operator-allow-ingress-intra-namespace
  namespace: elastic-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: elastic-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: elastic-system
