elastic-system/network-policy-elastic-operator-default-deny.yaml
# Network policy for ECK operator namespace.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elastic-operator-default-deny
  namespace: elastic-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: elastic-operator
  policyTypes:
    - Ingress
    - Egress
